--- a/src/Demoweb/Demo/Areas/Admin/Views/Authors/Index.cshtml
+++ b/src/Demoweb/Demo/Areas/Admin/Views/Authors/Index.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/3.0.2/css/buttons.dataTables.min.css">
 }
 
+
 <!--begin::App Content Header-->
 <div class="app-content-header">
     <!--begin::Container-->
@@ -39,6 +40,12 @@
                     <div class="card-header"><h3 class="card-title">Available Authors</h3></div>
                     <!-- /.card-header -->
                     <div class="card-body">
+
+
+
+                       
+                        <partial name="_ResponsePartial" />
+                        <partial name="_ModalPartial" />
                         <table id="authors" class="table table-bordered">
                             <thead>
                                 <tr>
@@ -131,6 +138,25 @@
                  dom: '<"row"<"col-sm-12 col-md-6"lB><"col-sm-12 col-md-6"f>><"row"<"col-sm-12"tr>><"row"<"col-sm-12 col-md-5"i><"col-sm-12 col-md-7"p>>',
                 "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
             }).buttons().container().appendTo('#authors_wrapper .col-md-6:eq(0)');
+
+
+
+            $('#authors').on('click','.show-bs-modal', function(){
+
+                let id=$(this).data("id");
+                let deletemodal=$("#modal-delete");
+                deletemodal.find('.modal-body p').text('Are you sure you want to delete this author?')
+                $('#delete-id').val(id);
+                $('#delete-form').attr('action','/admin/authors/delete')
+                deletemodal.modal('show');
+
+            });
+
+
+            $('#delete-button').click(function(){
+                $('#delete-form').submit();
+            })
+
 
             });
 
