--- a/src/Demoweb/Demo/Areas/Admin/Views/Shared/_ResponsePartial.cshtml
+++ b/src/Demoweb/Demo/Areas/Admin/Views/Shared/_ResponsePartial.cshtml
@@ -1,1 +1,9 @@
-﻿
+﻿﻿@using Demo.Infrastructure
+
+@if (TempData.Peek<ResponseModel>("ResponseMessage") != null)
+{
+    var response = TempData.Get<ResponseModel>("ResponseMessage");
+    <div class="callout callout-@(response.Type.ToString().ToLower())">
+        @response.Message
+    </div>
+}
